<resources>
    <string name="app_name">Fox\'s Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_initial_display">Fox\'s Map</string>
    <string name="building">Building</string>
    <string name="room_number">Room Number</string>
    <string name="location">Location</string>
    <string name="person">Person</string>
    <string name="class_section">Class</string>
    <string name="title_activity_indoor_tracking">IndoorTracking</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_registration">Registration</string>
</resources>
